--- a/acme-photography/css/style.css
+++ b/acme-photography/css/style.css
@@ -25,3 +25,113 @@ img {
     display: block;
     width: 100%
 }
+
+main {
+    max-width: 900px;
+    margin: auto;
+    box-shadow: 30px 0px 40px rgba(0, 0, 0, 0.1),
+        -30px 0px 40px rgba(0, 0, 0, 0.1);
+    
+}
+
+#landing {
+    background: #FFF;
+}
+
+#landingText {
+    display: flex;
+    flex: 0, 1, 40vw;
+    height: 50vh;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    padding-right: 1rem;
+    padding-left: 1rem;
+}
+
+    #landingText h2 {
+        color: #888;
+    }
+
+#landingImage {
+    background: url(https://source.unsplash.com/De8wMYoSSBc);
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    height: 50vh;
+    flex: 0 1 60vw;
+    margin: 0;
+}
+
+.btn {
+    display: inline-block;
+    margin: 2rem 0 0;
+    padding: 0.5rem 2rem;
+    border: 1px solid #CCC;
+    border-radius: 50px;
+    text-decoration: none;
+    color: #333;
+    transition: background 500ms ease;
+}
+
+    .btn:hover {
+        background: #f4f4f4;
+    }
+
+#header {
+    padding: 1.5rem;
+    text-align: center;
+    background: #333;
+    color: #FFF;
+}
+
+    #header h2 {
+        display: inline-block;
+        border-left: 1px dotted #FFF;
+        border-right: 1px dotted #FFF;
+        padding-right: 1rem;
+        padding-left: 1rem;
+
+    }
+
+.caption {
+    padding: 0.8rem;
+    text-align: center;
+}
+
+footer {
+    text-align: center;
+    padding: 2rem 1rem;
+    margin: auto;
+    color: #333;
+}
+
+footer h3 {
+    font-size: 3rem;
+    margin-bottom: 0;
+}
+
+/* Screen sizes 500px and up */
+
+@media(min-width: 500px) {
+    #landing {
+        display: flex;
+        height: 100%;
+    }
+    
+    #landingText {
+        height: 100vh;
+    }
+    
+    #landingImage {
+        height: 100vh;
+    }
+}
+
+/* Screen sizes 700px and up */
+
+@media(min-width: 700px) {
+    .btn {
+        padding: 1rem 3rem;
+    }
+}
