--- a/css-transitions-animations/transitions.css
+++ b/css-transitions-animations/transitions.css
@@ -9,10 +9,16 @@ body {
     position: relative;
     margin: auto;
     top:200px;
-    transition-property: background, border-radius;
+    /* transition-property: background, border-radius, transform; */
+    transition-property: all;
     transition-duration: 1s;
+    /* transition-delay: 2s; */
+    /* transition-timing-function: linear; */
+    transition-timing-function: ease-in;
 }
 
 .box:hover {
     background: red;
+    border-radius: 50%;
+    transform: rotateY(180deg);
 }
